# eave

./: .gitignore  CMakeLists.txt  README.md  listen.py
include/: aud.h  core.h  fragment.glsl  main.h  vertex.glsl  vis.h
include/glad/: glad.h
include/shaders/: coverfrag.glsl  covervrtx.glsl  fragment.glsl  newfrag.glsl  vertex.glsl  vertex2.glsl  vertexBars.glsl  vertexWave.glsl
src/: glad.c  main.cpp
src/aud/: aud_main.cpp  aud_thread.cpp
src/inf/: inf_thread.cpp  listener.py
src/vis/: setup.cpp  vis_main.cpp  vis_thread.cpp
